--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -39,9 +39,12 @@ html,body{
   width: 100%;
   height: 100%;
   overflow: hidden;
-  background-color: #ddd;
+  background-color: #222;
+  perspective: 1800px;
+
   //将选择器提到最外层
   @at-root {
+
     .img-figure{
       position: absolute;
       width: 320px;
@@ -50,6 +53,15 @@ html,body{
       padding: 40px;
       background-color: #fff;
       box-sizing: border-box;
+      cursor: pointer;
+      transition: left 0.6s ease-in-out,
+                  top 0.6s ease-in-out,
+                  transform 0.6s ease-in-out;
+      transform-origin: 0 50% 0;
+      transform-style: preserve-3d;
+      &.is-inverse{
+        transform: translateX(320px) rotateY(180deg);
+      }
       img{
         width: 100%;
       }
@@ -61,6 +73,25 @@ html,body{
         color: #a7a0a2;
         font-size: 16px;
       }
+
+    }
+    .img-front{
+      backface-visibility: hidden;
+
+    }
+    .img-back{
+      position: absolute;
+      left: 0;
+      top:0;
+      width: 100%;
+      height: 100%;
+      box-sizing: border-box;
+      padding: 50px 40px;
+      background-color: #444;
+      color:#fff;
+      z-index: 111;
+      transform:rotateY(180deg);
+      backface-visibility: hidden;
     }
   }
 }
